--- a/mypractice-nextjs/.env
+++ b/mypractice-nextjs/.env
@@ -2,14 +2,4 @@
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-DATABASE_URL="mongodb+srv://abhayspycoding:fKVbKPpkHtlHWTaB@spycoding.6nq8g.mongodb.net/messanger"
-NEXTAUTH_SECRET="MYSECRET"
-
-GITHUB_ID=42e1d8cec828330550f1
-GITHUB_SECRET=759cf83ee3062bf6a6b0ef560274ca4b35d1310b
-
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_ID=
+# See the documentation for all the connection string options: https://pris.ly/d/conn
