--- a/mypractice-nextjs/.env
+++ b/mypractice-nextjs/.env
@@ -2,12 +2,4 @@
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/conn
-GOOGLE_ID=11460078178-unsiq2728p7j557rf9b61vkunud86eo1.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-MONGODB_URI=mongodb+srv://abhayspycoding:fKVbKPpkHtlHWTaB@spycoding.6nq8g.mongodb.net/messanger?retryWrites=true&w=majority
-DATABASE_URL=mongodb+srv://abhayspycoding:fKVbKPpkHtlHWTaB@spycoding.6nq8g.mongodb.net/messanger?retryWrites=true&w=majority
-
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_INTERNAL=http://localhost:3000
-NEXTAUTH_SECRET=numm+kR8uHjdt6tynMti5nHPT40i1GAYtHe9kzNRLEM=
+# See the documentation for all the connection string options: http
